# timer

./: .gitignore  android.html  generate_code.py  main.js  mobile.html  package-lock.json  package.json  preload.js  receiver.html  timer.html
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs  mobile.rs
