[package]
name = "program-timer"
version = "1.0.0"
edition = "2021"

[lib]
name = "program_timer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = ">=0.3.31, <0.3.37"
